update general css

--- a/education.html
+++ b/education.html
@@ -51,7 +51,7 @@
                             <h1>About Me</h1>
                             <p>I am constantly working to better myself as an engineer 
                                 and as a person both in and out of classes.</p>
-                            <a href="about_me.html" class="learn-more">Learn More</a>
+                            <a href="about_me.html" class="button">Learn More</a>
                         </div>
                         <hr>
                         <div class="info-snippet" id="projects">
@@ -59,7 +59,7 @@
                             <h1>Projects</h1>
                             <p>Between courses and work experience, I have had the 
                                 opportunity to work on many projects.</p>
-                            <a href="projects.html" class="learn-more">Learn More</a>
+                            <a href="projects.html" class="button">Learn More</a>
                         </div>
                     </div>
                     <div class="right-content">
@@ -132,7 +132,7 @@
                             <p> I graduated from Foothill High School with a 4.4/4.0 GPA
                                 in Spring of 2020. Some of my honors are listed below.</p>
                             <ul>
-                                <li>Nationl Merit Scholarship Finalist</li>
+                                <li>National Merit Scholarship Finalist</li>
                                 <li>AP Scholar with Distinction</li>
                             </ul>
                         </div>
