--- a/index.html
+++ b/index.html
@@ -42,9 +42,13 @@
                                     class <br> of 2024 majoring in Mechanical Engineering with a focus on
                                     aerospace. <br>This website was created as an online portfolio to showcase 
                                     the projects I <br>have worked on. Please enjoy my online portfolio!</h2>
+                                <a href="resume.html" class="button">Resume</a>
                             </div>
                         </div>
                         <img src="images/roster_photo.png" alt="Image failed to load" id="profile-img">
+                    </div>
+                    <div id="arrow">
+                        <i class="fa-solid fa-angle-down"></i>
                     </div>
                 </section>
                 <div class="main-content">
