--- a/resume.html
+++ b/resume.html
@@ -47,6 +47,13 @@
                         <img src="images/roster_photo.png" alt="Image failed to load" id="profile-img">
                     </div>
                 </section>
+                <iframe
+                    src="docs/resume.pdf"
+                    frameBorder="0"
+                    scrolling="auto"
+                    height="100%"
+                    width="100%"
+                ></iframe>
             </div>
     
             <footer id="footer">
