--- a/resume.html
+++ b/resume.html
@@ -48,7 +48,7 @@
                     </div>
                 </section>
                 <iframe
-                    src="docs/resume.pdf"
+                    src="docs/Ren_Resume.pdf"
                     frameBorder="0"
                     scrolling="auto"
                     height="100%"
