added resume page

--- a/education.html
+++ b/education.html
@@ -34,7 +34,7 @@
             <div class="main-container">
                 <section class="section-info-container title-container" id="education">
                     <div class="header-content">
-                        <div id="education-text">
+                        <div id="title-text">
                             <div id="text-content">
                                 <h1>Education</h1>
                                 <hr>
