--- a/resume.html
+++ b/resume.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<!-- Portfolio education page -->
-<!-- Last updated by Alex Ren on 07/30/2022 -->
+<!-- Portfolio resume page -->
+<!-- Last updated by Alex Ren on 08/01/2022 -->
 <html lang="en">
     <head>
         <meta charset="utf-8">
@@ -8,7 +8,7 @@
         <title>Alex Ren's Engineering Portfolio</title>
         <meta name="description" content="Alex Ren's engineering portfolio">
         <link rel="stylesheet" href="main.css">
-        <link rel="stylesheet" href="education.css">
+        <link rel="stylesheet" href="resume.css">
         <!--<base href="alexjren.github.io/" target="_self">-->
         <script src="https://kit.fontawesome.com/c8dd9d74ce.js" crossorigin="anonymous"></script>
     </head>
@@ -32,28 +32,21 @@
             </header>
 
             <div class="main-container">
-                <section class="section-info-container" id="title-container">
+                <section class="section-info-container title-container" id="resume">
                     <div class="header-content">
-                        <div id="text">
+                        <div id="title-text">
                             <div id="text-content">
-                                <h1>Welcome to my personal website!</h1>
+                                <h1>Resume</h1>
                                 <hr>
-                                <h2>My name is Alex Ren. I am a student in the Johns Hopkins University
-                                    class <br> of 2024 majoring in Mechanical Engineering with a focus on
-                                    aerospace. <br>This website was created as an online portfolio to showcase 
-                                    the projects I <br>have worked on. Please enjoy my online portfolio!</h2>
+                                <h2>My most current <a href="docs/Ren_Resume.pdf" download>resume</a>
+                                    , last updated Jan 24, 2022.</h2>
                             </div>
                         </div>
-                        <img src="images/roster_photo.png" alt="Image failed to load" id="profile-img">
                     </div>
                 </section>
-                <iframe
-                    src="docs/Ren_Resume.pdf"
-                    frameBorder="0"
-                    scrolling="auto"
-                    height="100%"
-                    width="100%"
-                ></iframe>
+                <div class="main-content">
+                    <iframe src="docs/Ren_Resume 2022-01-24.pdf"></iframe>
+                </div>
             </div>
     
             <footer id="footer">
