--- a/resume.html
+++ b/resume.html
@@ -58,7 +58,7 @@
                         </li>
                         <li>
                             <h1>Email</h1>
-                            <a>aren3@jhu.edu</a>
+                            <a href="mailto: aren3@jhu.edu">aren3@jhu.edu</a>
                         </li>
                         <li>
                             <h1>Follow</h1>
