--- a/contact.html
+++ b/contact.html
@@ -47,24 +47,24 @@
                     </div>
                 </section>
                 <div class="main-content">
-                    <form action="/action_page.php">
+                    <form action="http://formspree.io/aren3@jhu.edu" method="POST">
                         <div>
                             <div>
                                 <label for="fname">First Name</label>
-                                <input type="text" id="fname" name="firstname" placeholder="Your name..">
+                                <input type="text" id="fname" name="firstname" placeholder="Your name.." required>
                             </div>
                             <div>
                                 <label for="lname">Last Name</label>
-                                <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+                                <input type="text" id="lname" name="lastname" placeholder="Your last name.." required>
                             </div>
                         </div>
                         <div>
                             <label for="email">Email Address</label>
-                            <input type="text" id="email" name="email" placeholder="Your email...">
+                            <input type="text" id="email" name="email" placeholder="Your email..." required>
                         </div>
                         <div>
                             <label for="message">Message</label>
-                            <textarea id="message" name="message" placeholder="Write something.." style="height:170px"></textarea>
+                            <textarea id="message" name="message" placeholder="Write something.." style="height:170px" required></textarea>
                         </div>
                         <input type="submit" value="Submit">
                     </form>
