--- a/education.html
+++ b/education.html
@@ -26,7 +26,7 @@
                         <li><a href="education.html">Education</a></li>
                         <li><a href="projects.html">Projects</a></li>
                         <li><a href="resume.html">Resume</a></li>
-                        <li><a href="contact.php">Contact</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
             </header>
