added about me and images

--- a/about_me.html
+++ b/about_me.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- Portfolio education page -->
-<!-- Last updated by Alex Ren on 07/30/2022 -->
+<!-- Last updated by Alex Ren on 08/02/2022 -->
 <html lang="en">
     <head>
         <meta charset="utf-8">
@@ -8,7 +8,7 @@
         <title>Alex Ren's Engineering Portfolio</title>
         <meta name="description" content="Alex Ren's engineering portfolio">
         <link rel="stylesheet" href="main.css">
-        <link rel="stylesheet" href="education.css">
+        <link rel="stylesheet" href="about_me.css">
         <!--<base href="alexjren.github.io/" target="_self">-->
         <script src="https://kit.fontawesome.com/c8dd9d74ce.js" crossorigin="anonymous"></script>
     </head>
@@ -32,21 +32,59 @@
             </header>
 
             <div class="main-container">
-                <section class="section-info-container" id="title-container">
+                <section class="section-info-container title-container" id="education">
                     <div class="header-content">
-                        <div id="text">
+                        <div id="title-text">
                             <div id="text-content">
-                                <h1>Welcome to my personal website!</h1>
+                                <h1>About Me</h1>
                                 <hr>
-                                <h2>My name is Alex Ren. I am a student in the Johns Hopkins University
-                                    class <br> of 2024 majoring in Mechanical Engineering with a focus on
-                                    aerospace. <br>This website was created as an online portfolio to showcase 
-                                    the projects I <br>have worked on. Please enjoy my online portfolio!</h2>
+                                <h2>A brief introduction to me.</h2>
                             </div>
                         </div>
-                        <img src="images/roster_photo.png" alt="Image failed to load" id="profile-img">
                     </div>
                 </section>
+                <div class="main-content">
+                    <div class="left-content">
+                        <div class="info-snippet" id="education">
+                            <img>
+                            <h1>Education</h1>
+                            <p>I am currently a junior at Johns Hopkins University expecting
+                                to graduate in spring of 2024 with a Bachelor of Science in 
+                                Mechanical Engineering.
+                            </p>
+                            <a href="education.html" class="button">Learn More</a>
+                        </div>
+                        <hr>
+                        <div class="info-snippet" id="projects">
+                            <img src="images/crane_project.jpg">
+                            <h1>Projects</h1>
+                            <p>Between courses and work experience, I have had the 
+                                opportunity to work on many projects.</p>
+                            <a href="projects.html" class="button">Learn More</a>
+                        </div>
+                    </div>
+                    <div class="right-content">
+                        <img>
+                        <p>
+                            My name is Alex Ren and I am a mechanical engineering student at Johns Hopkins University.
+                            I am expecting to graduate with my degree in Mechanical Engineering in spring of 2024. I am
+                            always looking for opportunities to better myself as an engineer and as a person and am working
+                            on side projects that expand my skill set. I am also a member of the Men's Varsity swim team at
+                            Hopkins and in my free time, I enjoy playing and arranging pieces for the piano or playing video games.
+                            <br><br>
+                            I have experience solving complex and analytical problems with diverse teams in an academic setting.
+                            I have worked on many individual and team-based project in my time at JHU so far. Additionally,
+                            I am currently working an NSF REU Fellowship where I tackle various research problems. My interests
+                            lie in aerospace and aerospace-related research and design.
+                            <br><br>
+                            Thank you for taking the time to look through my online portfolio which details my projects and experience.
+                            Feel free to contact me with any questions or comments you may have.
+                            <br><br>
+                            Sincerely,<br>
+                            Alex Ren
+                        </p>
+                    </div>
+                </div>
             </div>
     
             <footer id="footer">
@@ -58,7 +96,7 @@
                         </li>
                         <li>
                             <h1>Email</h1>
-                            <a>aren3@jhu.edu</a>
+                            <a href="mailto: aren3@jhu.edu">aren3@jhu.edu</a>
                         </li>
                         <li>
                             <h1>Follow</h1>
