--- a/education.html
+++ b/education.html
@@ -55,7 +55,7 @@
                         </div>
                         <hr>
                         <div class="info-snippet" id="projects">
-                            <img>
+                            <img src="images/crane_project.jpg">
                             <h1>Projects</h1>
                             <p>Between courses and work experience, I have had the 
                                 opportunity to work on many projects.</p>
